@@ -5,9 +5,10 @@ import datetime
 import gtk
 import gettext
 from interface import WidgetInterface
-from tryton.common import HM_FORMAT, TRYTON_ICON, timezoned_date, \
+from tryton.common import TRYTON_ICON, timezoned_date, \
     untimezoned_date
-from tryton.common import date_widget, Tooltips, get_toplevel_window
+from tryton.common import date_widget, Tooltips, get_toplevel_window, \
+    datetime_strftime
 from tryton.translate import date_format
 
 _ = gettext.gettext
@@ -16,12 +17,10 @@ _ = gettext.gettext
 class Calendar(WidgetInterface):
     "Calendar"
 
-    def __init__(self, field_name, model_name, attrs=None, format=None):
+    def __init__(self, field_name, model_name, attrs=None):
         super(Calendar, self).__init__(field_name, model_name, attrs=attrs)
 
-        if format is None:
-            format = date_format()
-        self.widget = date_widget.ComplexEntry(format, spacing=0)
+        self.widget = date_widget.ComplexEntry('', spacing=0)
         self.entry = self.widget.widget
         self.entry.set_property('activates_default', True)
         self.entry.connect('key_press_event', self.sig_key_press)
@@ -76,10 +75,15 @@ class Calendar(WidgetInterface):
         field.set_client(record, self.entry.get_text())
         return True
 
+    def get_format(self, record, field):
+        return date_format()
+
     def display(self, record, field):
         if not field:
+            self.entry.set_format('')
             self.entry.clear()
             return False
+        self.entry.set_format(self.get_format(record, field))
         super(Calendar, self).display(record, field)
         value = field.get_client(record)
         if not value:
@@ -89,6 +93,12 @@ class Calendar(WidgetInterface):
                 self.entry.set_width_chars(len(value))
             self.entry.set_text(value)
         return True
+
+    def cal_position(self, win):
+        x, y = self.widget.window.get_origin()
+        widget_allocation = self.widget.get_allocation()
+        win.move(x + widget_allocation.x,
+            y + widget_allocation.y + widget_allocation.height)
 
     def cal_open(self, widget):
         parent = get_toplevel_window()
@@ -107,6 +117,8 @@ class Calendar(WidgetInterface):
         cal.connect('day-selected-double-click',
                 lambda *x: win.response(gtk.RESPONSE_OK))
         win.vbox.pack_start(cal, expand=True, fill=True)
+
+        self.cal_position(win)
         win.show_all()
 
         self.set_value(self.record, self.field)
@@ -130,8 +142,10 @@ class DateTime(Calendar):
     "DateTime"
 
     def __init__(self, field_name, model_name, attrs=None):
-        super(DateTime, self).__init__(field_name, model_name, attrs=attrs,
-            format=date_format() + ' ' + HM_FORMAT)
+        super(DateTime, self).__init__(field_name, model_name, attrs=attrs)
+
+    def get_format(self, record, field):
+        return date_format() + ' ' + field.time_format(record)
 
     def cal_open(self, widget):
         parent = get_toplevel_window()
@@ -143,16 +157,6 @@ class DateTime(Calendar):
         win.set_icon(TRYTON_ICON)
         win.vbox.set_spacing(2)
 
-        hbox = gtk.HBox(spacing=2)
-        hbox.pack_start(gtk.Label(_('Hour:')), expand=False, fill=False)
-        widget_hour = gtk.SpinButton(gtk.Adjustment(0, 0, 23, 1, 5), 1, 0)
-        hbox.pack_start(widget_hour, expand=True, fill=True)
-        hbox.pack_start(gtk.Label(_('Minute:')), expand=False, fill=False)
-        widget_minute = gtk.SpinButton(
-                gtk.Adjustment(0, 0, 59, 1, 10), 1, 0)
-        hbox.pack_start(widget_minute, expand=True, fill=True)
-        win.vbox.pack_start(hbox, expand=False, fill=True)
-
         cal = gtk.Calendar()
         cal.set_display_options(gtk.CALENDAR_SHOW_HEADING | \
                 gtk.CALENDAR_SHOW_DAY_NAMES | \
@@ -161,28 +165,33 @@ class DateTime(Calendar):
         cal.connect('day-selected-double-click',
                 lambda *x: win.response(gtk.RESPONSE_OK))
         win.vbox.pack_start(cal, expand=True, fill=True)
+
+        hbox = gtk.HBox(spacing=2)
+        time_label = gtk.Label(_('Time:'))
+        hbox.pack_start(time_label, expand=False, fill=True)
+        time_format = self.field.time_format(self.record)
+        wtime = date_widget.ComplexEntry(time_format)
+        hbox.pack_start(wtime, expand=True, fill=True)
+        win.vbox.pack_start(hbox, expand=False, fill=True)
+
+        self.cal_position(win)
         win.show_all()
 
         self.set_value(self.record, self.field)
         val = self.field.get(self.record)
         if val:
             val = timezoned_date(val)
-            widget_hour.set_value(val.hour)
-            widget_minute.set_value(val.minute)
+            wtime.widget.set_text(datetime_strftime(val, time_format))
             cal.select_month(val.month - 1, val.year)
             cal.select_day(val.day)
-        else:
-            widget_hour.set_value(time.localtime()[3])
-            widget_minute.set_value(time.localtime()[4])
         response = win.run()
         if response == gtk.RESPONSE_OK:
-            hour = int(widget_hour.get_value())
-            minute = int(widget_minute.get_value())
+            date = wtime.widget.date_get()
             year = int(cal.get_date()[0])
             month = int(cal.get_date()[1]) + 1
             day = int(cal.get_date()[2])
-            date = untimezoned_date(datetime.datetime(year, month, day, hour,
-                    minute))
+            date = untimezoned_date(datetime.datetime(year, month, day,
+                    date.hour, date.minute, date.second))
             self.field.set_client(self.record, date)
             self.display(self.record, self.field)
         self._focus_out()
@@ -194,9 +203,11 @@ class Time(Calendar):
     "Time"
 
     def __init__(self, field_name, model_name, attrs=None):
-        super(Time, self).__init__(field_name, model_name, attrs=attrs,
-            format=HM_FORMAT)
+        super(Time, self).__init__(field_name, model_name, attrs=attrs)
         self.widget.remove(self.but_open)
+
+    def get_format(self, record, field):
+        return field.time_format(record)
 
     def sig_key_press(self, widget, event):
         self.send_modified()
