@@ -1,3 +1,4 @@
+* Manage time format
 * Deactivate attachment button when record is not created
 
 Version 2.4.0 - 2012-04-23
